--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -15,3 +15,7 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml      #使用的Mapper文件位置
   typeAliasesPackage: com.liusl.model           #它一般对应我们的实体类所在的包，这个时候会自动简单类名作为包括包名的别名取对应包中不包括包名的别名
+  #延迟加载
+  configuration:
+    lazy-loading-enabled: true
+    aggressive-lazy-loading: false
